@@ -58,6 +58,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - The pending (un)subscriptions waiting approval are now sorted by email
+      address in the admindb interface as intended.  (LP: 1164160)
+
     - The subscribe log entry for a bin/add_members subscribe now identifies
       bin/add_members as the source.  (LP: 1161642)
 
